--- a/student.html
+++ b/student.html
@@ -19,6 +19,8 @@
         
         <label for="dept">Department:</label><br>
         <input type="text" id="dept" name="dept" required><br><br>
+        
+        <!-- CHANGE -->
 
         <label for="course">Course:</label><br>
 <input type="text" id="course" name="course" required><br><br>
